# djview4

./: .cvsignore  .gitignore  COPYRIGHT  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.translations  README_packagers  README_translations  TODO  aclocal.m4  autogen.sh  configure  configure.ac  djview4.spec  djview4_4.0.orig.tar.gz.delta  djview4_4.0.orig.tar.gz.id  djview4_4.1.orig.tar.gz.delta  djview4_4.10.3.orig.tar.gz.delta  djview4_4.10.3.orig.tar.gz.id  djview4_4.10.4.orig.tar.gz.delta  djview4_4.10.4.orig.tar.gz.id  djview4_4.10.5.orig.tar.gz.delta  djview4_4.10.5.orig.tar.gz.id  djview4_4.10.6.orig.tar.gz.delta  djview4_4.10.6.orig.tar.gz.id  djview4_4.10.orig.tar.gz.delta  djview4_4.11.orig.tar.xz.delta  djview4_4.11.orig.tar.xz.id  djview4_4.12.orig.tar.xz.delta  djview4_4.12.orig.tar.xz.id  djview4_4.2.orig.tar.gz.delta  djview4_4.3.orig.tar.gz.delta  djview4_4.4.orig.tar.gz.delta  djview4_4.5.orig.tar.gz.delta  djview4_4.6.orig.tar.gz.delta  djview4_4.7.orig.tar.gz.delta  (+5 more)
config/: .gitignore  acinclude.m4  config.h.in  qmsilent.awk  qmsources.awk
debian/: .cvsignore  .gitignore  README.Debian  changelog  clean  control  copyright  djview-plugin.install  djview4.files  djview4.install  djview4.menu  djview4.mime  djview4.postinst  djview4.postrm  djview4.prerm  djvulibre-djview4.xpm  gbp.conf  postinst  rules  watch
debian/patches/: aarch64_cpu_definitions.patch  debian-changes  ppc64el.diff  series
debian/source/: include-binaries
desktopfiles/: .cvsignore  .gitignore  Makefile.am  Makefile.in  README  djvulibre-djview4.desktop  register-djview-menu.in
etc/: miniqmake
mac/: Makefile.am  README  ReadMe.rtf  make_djview_bundle.sh  make_djview_dmg.sh
mac/mdimporter_src/: GetMetadataForFile.m  Makefile.am  main.c
mac/qlgenerator_src/: GeneratePreviewForURL.m  GenerateThumbnailForURL.m  Makefile.am  ddjvuRef.c  ddjvuRef.h  main.c
mac/skel/: setpath.sh
mac/skel/Resources/: qt.conf
npdjvu/: LICENSE.GPL  Makefile.am  README  npdjvu.am  npdjvu.cpp  npdjvu.h  npdjvu.plist  npdjvu.pro  npdjvu.r  npdjvu.rc  qtbrowserplugin.h  qtbrowserplugin_mac.cpp  qtbrowserplugin_p.h  qtbrowserplugin_win.cpp  qtbrowserplugin_x11.cpp  qtnpapi.cpp  qtnpapi.h
nsdejavu/: .gitignore  COPYING  Makefile.am  Makefile.in  README  nsdejavu.1.in  nsdejavu.c  test.html
nsdejavu/npsdk/: COPYING  README.txt  npapi.h  npupp.h  prcpucfg.h  prtypes.h
src/: .cvsignore  .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.dep  djview.1  djview.am  djview.cpp  djview.h  djview.plist  djview.pro  djview.rc  djview_cs.ts  djview_de.ts  djview_es.ts  djview_fr.ts  djview_pl.ts  djview_ru.ts  djview_uk.ts  djview_zh_cn.ts  djview_zh_tw.ts  qdjview.cpp  qdjview.h  qdjview.qrc  qdjviewauthdialog.ui  qdjviewdialogerror.ui  qdjviewdialogs.cpp  qdjviewdialogs.h  qdjviewerrordialog.ui  qdjviewexportdialog.ui  qdjviewexporters.cpp  qdjviewexporters.h  qdjviewexportprn.ui  qdjviewexportps1.ui  qdjviewexportps2.ui  qdjviewexportps3.ui  qdjviewexporttiff.ui  qdjviewinfodialog.ui  qdjviewjobs.cpp  (+24 more)
src/images/: DjVu.icns  DjVuApp.icns
